# mcp-stdio-adapter

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
